# focus_finder

./: AUTHORS  CMakeLists.txt  LICENSE  README.md  TODO  valgrind.supp
cmake/: CompileOptions.cmake  (+3 more)
source/: CMakeLists.txt
source/focus_finder/: CMakeLists.txt
source/focus_finder/cmd/: CMakeLists.txt  main_cmd.cpp
source/focus_finder/common/: average_focus_curve_focusing_strategy.cpp  center_of_gravity_centroid_algorithm.cpp  centroid.cpp  centroid_algorithm.cpp  centroid_algorithm_factory.cpp  centroid_view.cpp  cimg_fits_io.cpp  curve_fit_parms.cpp  curve_fit_summary.cpp  curve_function.cpp  curve_function_factory.cpp  curve_function_gaussian.cpp  curve_function_hyperbolic.cpp  curve_function_hyperbolic_pos_only.cpp  curve_function_parabolic.cpp  curve_parm.cpp  curve_parms.cpp  default_focus_curve_recorder.cpp  device.cpp  device_manager_factory.cpp  draw_helper.cpp  dummy_camera.cpp  dummy_device.cpp  dummy_device_connector.cpp  dummy_device_manager.cpp  dummy_filter.cpp  dummy_focus.cpp  focus_analyzer.cpp  focus_controller.cpp  focus_curve.cpp  focus_curve_record.cpp  focus_curve_record_set.cpp  focus_curve_record_set_container.cpp  focus_curve_recorder_factory.cpp  focus_curve_recorder_logic.cpp  focus_finder_calibration.cpp  focus_finder_executor.cpp  focus_finder_factory.cpp  focus_finder_fast_curve_lookup.cpp  focus_finder_hyperbolic.cpp  (+56 more)
source/focus_finder/common/include/: averaged_focus_curve_focusing_strategy.h  bad_pixel_median_interpolator.h  binning.h  boundary_location.h  camera.h  camera_interface.h  center_of_gravity_centroid_algorithm.h  centroid.h  centroid_algorithm.h  centroid_algorithm_factory.h  centroid_algorithm_type.h  centroid_type.h  centroid_type_ptree_translator.h  centroid_view.h  cimg_fits_io.h  converter_pixel_arcsec.h  cooler.h  curve_fit_algorithm.h  curve_fit_exception.h  curve_fit_parms.h  curve_fit_summary.h  curve_function.h  curve_function_factory.h  curve_function_gaussian.h  curve_function_hyperbolic.h  curve_function_hyperbolic_pos_only.h  curve_function_parabolic.h  curve_half.h  curve_parm.h  curve_parms.h  curve_sector.h  default_focus_curve_recorder.h  device.h  device_connection_state.h  device_connector.h  device_interface.h  device_interface_type.h  device_manager.h  device_manager_factory.h  device_manager_type.h  (+129 more)
source/focus_finder/common/include/events/: new_frame_event.h
source/focus_finder/common/include/pipeline/: info.txt
source/focus_finder/common/include/pipeline/action/: average.h  files.h
source/focus_finder/gui/: CMakeLists.txt  about_dialog.cpp  about_dialog.ui  anim_menu_button.cpp  device_manager_dialog_factory.cpp  filter_cntl_panel.cpp  filter_cntl_panel.ui  focus_cntl_panel.cpp  focus_cntl_panel.ui  focus_curve_recorder_curve_details.ui  focus_curve_recorder_curve_details_panel.cpp  focus_curve_recorder_curve_details_panel.ui  focus_curve_recorder_dialog.cpp  focus_curve_recorder_dialog.ui  focus_curve_recorder_panel.cpp  focus_curve_recorder_panel.ui  focus_curve_recorder_point_details.ui  focus_curve_recorder_point_details_panel.cpp  focus_curve_recorder_point_details_panel.ui  focus_curve_recorder_progress_details_panel.cpp  focus_curve_recorder_progress_details_panel.ui  focus_curve_recorder_summary_details.ui  focus_curve_recorder_summary_details_panel.cpp  focus_curve_recorder_summary_details_panel.ui  focus_curve_view_panel.cpp  focus_curve_view_panel.ui  focus_curve_view_widget.cpp  focus_detail_panel.ui  focus_finder_gui_app.cpp  fofi_splash_widget.cpp  fwhm_view_panel.cpp  fwhm_view_panel.ui  fwhm_view_widget.cpp  hfd_view_panel.cpp  hfd_view_panel.ui  hfd_view_widget.cpp  image_converter_panel.cpp  image_converter_panel.ui  image_viewer_panel.cpp  image_viewer_panel.ui  (+19 more)
source/focus_finder/gui/include/: about_dialog.h  abstract_mapper_panel.h  anim_menu_button.h  device_manager_dialog_factory.h  filter_cntl_panel.h  focus_cntl_panel.h  focus_curve_record_set_container_tree_model.h  focus_curve_recorder_curve_details_panel.h  focus_curve_recorder_dialog.h  focus_curve_recorder_panel.h  focus_curve_recorder_point_details_panel.h  focus_curve_recorder_progress_details_panel.h  focus_curve_recorder_summary_details_panel.h  focus_curve_view_panel.h  focus_curve_view_widget.h  fofi_splash_widget.h  fwhm_view_panel.h  fwhm_view_widget.h  hfd_view_panel.h  hfd_view_widget.h  image_converter_panel.h  image_viewer_mode.h  image_viewer_panel.h  indi_device_manager_dialog.h  linear_bw_stretch_mapper_panel.h  main_window.h  manage_device_entry_panel.h  manage_device_profiles_dialog.h  profile_settings_dialog.h  reporting_viewer_panel.h  selectable_image_widget.h  spline_curve_mapper_panel.h  star_details_panel.h
source/focus_finder/tests/starmath-tests/: CMakeLists.txt  astro_image_processing_pipeline_tests.cpp  centroid_tests.cpp  curve_fitting_tests.cpp  defect_pixel_filter_tests.cpp  hfd_tests.cpp  image_reader_tests.cpp  image_slicer_tests.cpp  image_tests.cpp  pipeline_add_tests.cpp  pipeline_average_tests.cpp  pipeline_center_on_star_tests.cpp  pipeline_crop_tests.cpp  pipeline_divide_by_tests.cpp  pipeline_divide_tests.cpp  pipeline_files_tests.cpp  pipeline_images_tests.cpp  pipeline_multiply_by_tests.cpp  pipeline_multiply_with_tests.cpp  pipeline_read_tests.cpp  pipeline_real_world_tests.cpp  pipeline_scale_tests.cpp  pipeline_subtract_background_tests.cpp  pipeline_subtract_tests.cpp  point_tests.cpp  real_world_star_image_tests.cpp  single_star_detector_test.cpp  single_star_detector_tests.cpp  snr_tests.cpp  star_cluster_algorithm_tests.cpp  starmath_test_module.cpp  starmath_tests.cpp  thresholder_tests.cpp
source/focus_finder/tests/starmath-tests/test_data/: test_image_1.tif  test_image_12.tif  test_image_16.tif  test_image_17.tif  test_image_18.tif  test_image_19.tif  test_image_20.tif  test_image_21.tif  test_image_23.tif  test_image_4.tif  test_image_5.tif  test_image_6.tif  test_image_8.tif
source/tests/: CMakeLists.txt
source/tests/focus_finder-test/: CMakeLists.txt  CMakeLists.txt~  focus_finder_test.C~  test1.C
source/tests/starmath-tests/: CMakeLists.txt
(+374 files in other folders)
